syntax = "proto3";

package protos.fira.v1;

import "protos/fira/v1/app-messages.proto";

option go_package = "github.com/opencorelabs/fira/gen/protos/go/protos/v1;v1";

message CreateAppRequest {
  string name = 1;
}

message CreateAppResponse {
  App app = 1;
}

message GetAppRequest {
  string app_id = 1;
}

message GetAppResponse {
  App app = 1;
}

message ListAppsRequest {}

message ListAppsResponse {
  repeated App apps = 1;
}

message RotateAppTokenRequest {
  string app_id = 1;
  Environment environment = 2;
}

message RotateAppTokenResponse {
  App app = 1;
}

message InvalidateAppTokenRequest {
  string app_id = 1;
  string jwt = 2;
}

message InvalidateAppTokenResponse {}