syntax = "proto3";

package protos.fira.v1;

import "protos/fira/v1/institution-messages.proto";

option go_package = "github.com/opencorelabs/fira/gen/protos/go/protos/v1;v1";

message GetInstitutionsRequest {
  string search_string = 1;
  repeated string country_codes = 2;
}

message GetInstitutionsResponse {
  repeated Institution institutions = 1;
}
